woocommerce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: woocommerce-svc
  namespace: woo
spec:
  type: LoadBalancer
  selector:
    app: woocommerce
  ports:
    - name: http
      port: 80
      targetPort: 80
